# enhance

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  mise.toml
.claude/: settings.json
.claude/skills/: start-step.md
.github/workflows/: test.yml
docs/: 1.md  10.md  11.md  11a.md  12.md  2.md  3.md  4.md  5.md  6.md  7.md  8.md  9.md  WEEK-1.md  WEEK-2.md  WEEK-3-4.md  WEEK-5-6.md  WEEK-7-8.md  WEEK1.md  design-sketch-11.md  design-sketch-12.md  todo.md
src/: catalog.rs  datum.rs  db.rs  engine.rs  executor.rs  heap.rs  lib.rs  main.rs  protocol.rs  server.rs  session.rs  sql.rs  storage.rs  tuple.rs  tx.rs
src/catalog/: cache.rs  cached.rs  core.rs  error.rs  schema.rs  snapshot.rs  store.rs  superblock.rs  types.rs  vc.rs
src/db/: database.rs  error.rs  session.rs
src/engine/: core.rs  error.rs  exec_context.rs  execution_point.rs  superblock.rs
src/executor/: aggregate.rs  column.rs  context.rs  dml.rs  error.rs  eval.rs  explain.rs  expr.rs  node.rs  plan.rs  planner.rs  row.rs  runner.rs  runtime.rs  tuple.rs  types.rs  value.rs
src/heap/: error.rs  page.rs  record.rs  scan.rs  scanner.rs  slotted.rs  value.rs  write.rs  writer.rs
src/protocol/: backend.rs  codec.rs  error.rs  frontend.rs  types.rs
src/server/: connection.rs  handshake.rs  listener.rs  registry.rs
src/sql/: ast.rs  error.rs  expr.rs  lexer.rs  parser.rs  token.rs
src/storage/: buffer.rs  error.rs  file.rs  io.rs  (+3 more)
tests/: buffer_pool_integration.rs  buffer_pool_stress.rs  heap_integration.rs  psql_integration.rs  psql_test_support.rs  storage_integration.rs  tuple_integration.rs
(+28 files in other folders)
