[package]
name = "enhance"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"

[dependencies]
bytes = "1"
futures-util = { version = "0.3", features = ["sink"] }
rand = "0.8"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

[dev-dependencies]
tempfile = "3"
